--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "app/Library"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
